turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:20: error: not found: type int
def makePattern(x:Array[int]) {
                        ^